@@ -5,3 +5,5 @@
 	* Added 'decant.pl'.
 2016-01-22 Fred Gleason <fredg@paravelsystems.com>
 	* Completed 'decant.pl'.
+2016-01-22 Fred Gleason <fredg@paravelsystems.com>
+	* Completed 'distill.pl'.
